maintenance report test

--- a/maintenance-report/main-report.html
+++ b/maintenance-report/main-report.html
@@ -5,17 +5,20 @@
     <title></title>
   </head>
   <body>
-    <button type="button" name="artemis" onclick="showArtemis">Artemis</button>
-    <button type="button" name="annaKerinina" onclick="showAnna">Anna Karenina</button>
-    <div class="template">
-      <h2>book title: replaceT</h2>
-      <h3>author:replaceA</h3>
-      <h3>publisher:replacePu</h3>
-      <h3>ISBN number:replaceI</h3>
-      <p>Pages:replacePa</p>
+    <button type="button" name="artemis" onclick="showArtemis()">Artemis</button>
+    <button type="button" name="annaKerinina" onclick="showAnna()">Anna Karenina</button>
+    <div id="template">
+      <h2>book title: <span id="replaceT"></span></h2>
+      <h3>author: replaceA</h3>
+      <h3>publisher: replacePu</h3>
+      <h3>ISBN number: replaceI</h3>
+      <p>Pages: replacePa</p>
       <p>Goodreads rating: replaceG</p>
       <p>My rating: replaceM</p>
 
     </div>
+    <script src="main-report.js">
+
+    </script>
   </body>
 </html>
