--- a/maintenance-report/main-report.html
+++ b/maintenance-report/main-report.html
@@ -9,12 +9,12 @@
     <button type="button" name="annaKerinina" onclick="showAnna()">Anna Karenina</button>
     <div id="template">
       <h2>book title: <span id="replaceT"></span></h2>
-      <h3>author: replaceA</h3>
-      <h3>publisher: replacePu</h3>
-      <h3>ISBN number: replaceI</h3>
-      <p>Pages: replacePa</p>
-      <p>Goodreads rating: replaceG</p>
-      <p>My rating: replaceM</p>
+      <h3>author: <span id="replaceA"></span></h3>
+      <h3>publisher: <span id="replacePu"></span></h3>
+      <h3>ISBN number: <span id="replaceI"></span></h3>
+      <p>Pages: <span id="replacePa"></span></p>
+      <p>Goodreads rating: <span id="replaceG"></span></p>
+      <p>My rating: <span id="replaceM"></span></p>
 
     </div>
     <script src="main-report.js">
