--- a/maintenance-report/main-report.html
+++ b/maintenance-report/main-report.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <button type="button" name="artemis" onclick="showArtemis()">Artemis</button>
+    <button type="button" name="artemis" id="artemis" onclick="showArtemis()">Artemis</button>
     <button type="button" name="annaKerinina" onclick="showAnna()">Anna Karenina</button>
     <div id="template">
       <h2>book title: <span id="replaceT"></span></h2>
@@ -16,6 +16,9 @@
       <p>Goodreads rating: <span id="replaceG"></span></p>
       <p>My rating: <span id="replaceM"></span></p>
 
+    </div>
+    <div id="arrayCounter">
+test
     </div>
     <script src="main-report.js">
 
