minimum viable product

--- a/listview/index.html
+++ b/listview/index.html
@@ -18,6 +18,81 @@
   <header class="header-class">
     iam  a big fat navigationbar
   </header>
+
+<div id="mobilewrapper" class="mobilewrapper">
+
+  <div class="header-for-overview">
+  <div class="titleO">
+
+    <h1>Resource overview - Mobile</h1>
+  </div>
+</div>
+
+  <p>View all</p> <i class="fas fa-toggle-off"></i>
+  <i class="fas fa-calendar-alt"></i>
+  <input id="search-mobile" class="search-mobile" type="text" name="" value="">
+  <i class="fas fa-search"></i>
+
+<div class="machinelist">
+  <div class="id037">
+  <h2 class="mobile-title">037 Bottero Lamilinea 734 Avl</h2>
+    <i onclick='show037' class="fas fa-tasks" ></i>
+
+    <div class="dates">
+      <p class="mobile-next">3 days ago</p>
+      <p class="mobile-last">17-01-2020</p>
+    </div>
+
+    <div class="img-machine">
+    <img src="machine.svg" alt="">
+      </div>
+    <div class="icon-mobile">
+      <i class="fas fa-wrench"></i>
+      <i class="fas fa-chart-bar"></i>
+    </div>
+  </div>
+
+  <div class="id001">
+  <h2 class="mobile-title2">001 Graham steam tunnel Z3271</h2>
+    <i onclick='show037' class="fas fa-tasks" ></i>
+
+    <div class="dates">
+      <p class="mobile-next">In 2 hours</p>
+      <p class="mobile-last">16-02-2020</p>
+    </div>
+
+    <div class="img-machine">
+    <img src="machine.svg" alt="">
+      </div>
+    <div class="icon-mobile">
+      <i class="fas fa-wrench"></i>
+      <i class="fas fa-chart-bar"></i>
+    </div>
+  </div>
+
+  <div class="id055">
+  <h2 class="mobile-title">055 ANDERSON STRATOS</h2>
+    <i onclick='show037' class="fas fa-tasks" ></i>
+
+    <div class="dates">
+      <p class="mobile-next">In 4 hours</p>
+      <p class="mobile-last">30-01-2020</p>
+    </div>
+
+    <div class="img-machine">
+    <img src="machine.svg" alt="">
+      </div>
+    <div class="icon-mobile">
+      <i class="fas fa-wrench"></i>
+      <i class="fas fa-clock"></i>
+    </div>
+  </div>
+
+</div>
+
+</div>
+
+<div id="desktopwrapper" class="desktopewrapper">
 <div class="header-for-overview">
 <div class="titleO">
   <h1>Resource overview</h1>
@@ -64,7 +139,7 @@
 </div>
 
 <div class="table-wrapper">
-  <table class="table table-striped">
+  <table id="table1" class="table table-striped">
       <tr  class="bg-info">
           <th  class="bg-info" data-colname="id" data-order="desc">ID &#9650;</th>
           <th  data-colname="name" data-order="desc">Name &#9650;</th>
@@ -80,6 +155,7 @@
       </tbody>
   </table>
 
+</div>
 </div>
 
 
