--- a/maintenance-report/main-report.html
+++ b/maintenance-report/main-report.html
@@ -8,9 +8,7 @@
 
   <script src="main-report.js" defer></script>
   <script src="main-report-checklist.js" defer></script>
-  <script src="main-report-his.js" defer>
-
-  </script>
+  <script src="main-report-his.js" defer></script>
   <script src="hide.js" defer>
 
   </script>
