--- a/maintenance-report/main-report.html
+++ b/maintenance-report/main-report.html
@@ -5,13 +5,12 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="main-report.css">
-
+  <link rel="stylesheet" href="modal2.css">
   <script src="main-report.js" defer></script>
-  <script src="main-report-checklist.js" defer></script>
-  <script src="main-report-his.js" defer></script>
-  <script src="hide.js" defer>
 
-  </script>
+  <script src="main-report-his.js" defer></script>
+  <script src="hide.js" defer></script>
+  <script defer src="modalscript2.js"></script>
 </head>
 
 <body>
@@ -91,6 +90,7 @@
 
           </div>
         </div>
+        <button data-modal-target="#modal" type="button">ÅBEN</button>
       </div>
     </div>
     <div class="his-wrapper">
@@ -133,9 +133,26 @@
         </tr>
       </table>
     </div>
-    <div id="hidden" class="d-none">
+    <div id="hidden" class="">
       default
     </div>
+    <div class="modal" id="modal">
+
+      <div class="modalheader">
+        <div class="overskrift">Eksempel</div>
+      </div>
+      <img class="jobsdoneicon" src="thanku.png" alt="">
+      <div class="modalbody">
+        Your data has been stored!
+        <br>
+        Have a great day, anon!
+      </div>
+
+      <button data-close-button class="close">You too</button>
+
+    </div>
+
+    <div id="overlay"></div>
   </div>
 </body>
 
