styleguide beginnings added

--- a/listview/index.html
+++ b/listview/index.html
@@ -72,11 +72,47 @@
 
   <div class="id055">
   <h2 class="mobile-title">055 ANDERSON STRATOS</h2>
-    <i onclick='show037' class="fas fa-tasks" ></i>
+    <i id="055" class="fas fa-tasks" ></i>
 
     <div class="dates">
       <p class="mobile-next">In 4 hours</p>
       <p class="mobile-last">30-01-2020</p>
+    </div>
+
+    <div class="img-machine">
+    <img src="machine.svg" alt="">
+      </div>
+    <div class="icon-mobile">
+      <i class="fas fa-wrench"></i>
+      <i class="fas fa-clock"></i>
+    </div>
+  </div>
+
+  <div class="id048">
+  <h2 class="mobile-title">048 TRUMPF 3530</h2>
+    <i id="048" class="fas fa-tasks" ></i>
+
+    <div class="dates">
+      <p class="mobile-next">In 2 days</p>
+      <p class="mobile-last">30-01-2020</p>
+    </div>
+
+    <div class="img-machine">
+    <img src="machine.svg" alt="">
+      </div>
+    <div class="icon-mobile">
+      <i class="fas fa-wrench"></i>
+      <i class="fas fa-chart-bar"></i>
+    </div>
+  </div>
+
+  <div class="id024">
+  <h2 class="mobile-title">024 Reggiani Unica Rotary Printing Machine </h2>
+    <i id="024" class="fas fa-tasks" ></i>
+
+    <div class="dates">
+      <p class="mobile-next">In 3 days</p>
+      <p class="mobile-last">29-10-2019</p>
     </div>
 
     <div class="img-machine">
