small changes to styleguide

--- a/listview/styleguide/buttons.html
+++ b/listview/styleguide/buttons.html
@@ -23,7 +23,7 @@
 
 <main>
   <div class="">
-    <h1>But a button is not just butt-on <span class="archi">trend</span>log.io maintenance planner </h1>
+    <h1>But a button is not just butt-on <span class="archi">trend</span>log.<span class="text-tg">io</span>s maintenance planner </h1>
   </div>
 
 
@@ -53,6 +53,19 @@
                       </td>
                       <td class="t-a-center">
                       &lt;i class=&quot;fas fa-calendar-alt&quot;&gt;&lt;/i&gt;
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>toggle</p> to show a new div in a god way
+
+                      </td>
+                      <td class="t-a-center">
+                      <i class="fas fa-toggle-off"></i>
+                      </td>
+                      <td class="t-a-center">
+                       &lt;i class=&quot;fas fa-toggle-off&quot;&gt;&lt;/i&gt;
                       </td>
                   </tr>
 
