--- a/listview/styleguide/headings.html
+++ b/listview/styleguide/headings.html
@@ -43,7 +43,7 @@
               <tbody>
                   <tr>
                       <td class="left">
-                        <p>This is the biggest header</p>
+                        <p>This is the biggest title</p>
                       </td>
                       <td class="t-a-center">
                         <h1>This a h1 header </h1>
@@ -55,7 +55,7 @@
 
                   <tr>
                       <td class="left">
-                        <p>This is the second biggest header</p>
+                        <p>This is the second biggest title</p>
                       </td>
                       <td class="t-a-center">
                         <h2>This a h2 header </h2>
@@ -65,19 +65,32 @@
                       </td>
                   </tr>
 
+                  <tr>
+                      <td class="left">
+                        <p>This is the header for much less importent things</p>
+                      </td>
+                      <td class="t-a-center">
+                        <h3>This a h3 header </h3>
+                      </td>
+                      <td class="t-a-center">
+                      &lt;h3&gt;This a h3 header &lt;/h3&gt;
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="left">
+                        <p>This is a sub title</p>
+                      </td>
+                      <td class="t-a-center">
+                        <h4>This a h4 header </h4>
+                      </td>
+                      <td class="t-a-center">
+                      &lt;h4&gt;This a h4 header &lt;/h4&gt;
+                      </td>
+                  </tr>
+
               </tbody>
           </table>
-
-
-
-  <div class="">
-    <h3>This a h3 header </h3>
-  </div>
-
-  <div class="">
-    <h4>This a h4 header </h4>
-  </div>
-
 
 
 
