--- a/listview/styleguide/icons.html
+++ b/listview/styleguide/icons.html
@@ -58,6 +58,19 @@
                       </td>
                   </tr>
 
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Toogle off</p>
+
+                      </td>
+                      <td class="t-a-center">
+                      <i class="fas fa-toggle-off"></i>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;i class=&quot;fas fa-toggle-off&quot;&gt;&lt;/i&gt;</p>
+                      </td>
+                  </tr
+
 
               </tbody>
           </table>
