--- a/maintenance-report/main-report.html
+++ b/maintenance-report/main-report.html
@@ -133,7 +133,7 @@
         </tr>
       </table>
     </div>
-    <div id="hidden" class="">
+    <div id="hidden" class="d-none">
       default
     </div>
     <div class="modal" id="modal">
