--- a/listview/styleguide/buttons.html
+++ b/listview/styleguide/buttons.html
@@ -23,7 +23,7 @@
 
 <main>
   <div class="">
-    <h1>But a button is not just butt-on <span class="archi">trend</span>log.<span class="text-tg">io</span>s maintenance planner </h1>
+    <h1>But a button is not just a butt-on <span class="archi">trend</span>log.<span class="text-tg">io</span>s maintenance planner </h1>
   </div>
 
 
