--- a/main-report.html
+++ b/main-report.html
@@ -141,7 +141,7 @@
       <div class="modalheader">
         <div class="overskrift">Eksempel</div>
       </div>
-      <img class="jobsdoneicon" src="thanku.png" alt="">
+      <img class="jobsdoneicon" src="media/thanku.png" alt="">
       <div class="modalbody">
         Your data has been stored!
         <br>
