--- a/calendar.html
+++ b/calendar.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="calendar.css">
-  <script src="calendar.js" defer></script>
+  <link rel="stylesheet" href="css/calendar.css">
+  <script src="js/calendar.js" defer></script>
   <title>Calendar</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="calendar-dates">10</div>
-    
+
 
     <div class="calendar-dates" id="thisday" ondblclick="dayinfo()">
 
