--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta charset="utf-8">
+  <title>Trendlog.io maintenance modul redesign</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/f47fcebf42.js" crossorigin="anonymous"></script>
 
@@ -13,15 +15,14 @@
 
   <script src="js/main-report-his.js" defer></script>
   <script src="js/hide.js" defer></script>
-  <script defer src="js/modalscript2.js"></script>
+  
   <link rel="stylesheet" href="css/calendar.css">
   <script src="js/calendar.js" defer></script>
 
   <!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     -->
 
-  <meta charset="utf-8">
-  <title></title>
+
 </head>
 
 <body>
@@ -41,7 +42,7 @@
 
     <p>View all</p> <i class="fas fa-toggle-off"></i>
     <i class="fas fa-calendar-alt"></i>
-    <input id="search-mobile" class="search-mobile" type="text" name="" value="">
+    <input id="search-mobile" class="search-mobile" type="text">
     <i class="fas fa-search"></i>
 
     <div class="machinelist">
@@ -162,21 +163,21 @@
 
         <div class="entries-wrapper">
           <p>Show</p>
-          <select class="" name="">
+          <select>
 
           </select>
           <p>entries</p>
         </div>
         <div class="resource-wrapper">
           <p>Resource Type</p>
-          <select class="show" name="">
+          <select class="show">
             <p>1</p>
           </select>
 
         </div>
 
         <div class="search-wrapper">
-          <input id="search-input" class="form-control" type="text" name="" value="">
+          <input id="search-input" class="form-control" type="text">
           <i class="fas fa-search"></i>
         </div>
 
@@ -208,181 +209,184 @@
 
 
 
-  <script src="js/main.js" charset="utf-8"></script>
+  <script src="js/main.js"></script>
 
-<!-- NOTE: Calendar view starter her -->
+  <!-- NOTE: Calendar view starter her -->
 
-<div class="calendar-showing">
+  <div class="calendar-showing">
 
-  <div class="date-selectors">
+    <div class="date-selectors">
 
-    <div class="current-year">
-      <button name="previousyear" onclick="previousyear()"></button>
-      <p id="year"></p>
-      <button name="nextyear" onclick="nextyear()"></button>
+      <div class="current-year">
+        <button name="previousyear" onclick="previousyear()"></button>
+        <p id="year"></p>
+        <button name="nextyear" onclick="nextyear()"></button>
+      </div>
+
+      <div class="current-month">
+        <button name="previousmonth" onclick="previousmonth()"></button>
+        <p id="month"></p>
+        <button name="nextmonth" type="button" onclick="nextmonth()"></button>
+      </div>
+
     </div>
 
-    <div class="current-month">
-      <button name="previousmonth" onclick="previousmonth()"></button>
-      <p id="month"></p>
-      <button name="nextmonth" type="button" onclick="nextmonth()"></button>
+
+    <div class="calendar-container">
+      <div class="calendar-days">
+        <div class="days">Monday</div>
+        <div class="days">Tuesday</div>
+        <div class="days">Wednesday</div>
+        <div class="days">Thursday</div>
+        <div class="days">Friday</div>
+        <div class="days">Saturday</div>
+        <div class="days">Sunday</div>
+      </div>
+
+      <div class="date-container">
+        <div class="calendar-dates">01</div>
+        <div class="calendar-dates">02</div>
+        <div class="calendar-dates">03</div>
+        <div class="calendar-dates">04</div>
+        <div class="calendar-dates">05</div>
+        <div class="calendar-dates">06</div>
+        <div class="calendar-dates">07</div>
+        <div class="calendar-dates">08</div>
+        <div class="calendar-dates">
+          <p>9</p>
+          <div class="overdue">
+            <h5>46</h5>
+          </div>
+        </div>
+        <div class="calendar-dates">10</div>
+
+
+        <div class="calendar-dates" id="thisday" ondblclick="dayinfo()">
+
+          <p>11</p>
+          <div class="duenow">
+            <h5>21</h5>
+
+          </div>
+          <div class="duenow">
+            <h5>18</h5>
+
+          </div>
+        </div>
+
+        <div class="calendar-dates">
+          <p>12</p>
+          <div class="duenow">
+            <h5>10</h5>
+
+          </div>
+          <div class="duesoon">
+            <h5>10</h5>
+
+          </div>
+          <div class="duesoon">
+            <h5>10</h5>
+
+          </div>
+          <div class="duesoon">
+            <h5>10</h5>
+
+          </div>
+        </div>
+        <div class="calendar-dates">13</div>
+        <div class="calendar-dates">14</div>
+        <div class="calendar-dates">
+          <p>15</p>
+          <div class="duelong">
+            <h5>13</h5>
+
+          </div>
+
+          <div class="duelong">
+            <h5>12</h5>
+
+          </div>
+        </div>
+        <div class="calendar-dates">
+          <p>16</p>
+          <div class="duelong">
+            <h5>14</h5>
+
+          </div>
+          <div class="duelong">
+            <h5>47</h5>
+
+          </div>
+        </div>
+        <div class="calendar-dates">
+          <p>17</p>
+          <div class="duelong">
+            <h5>367</h5>
+
+          </div>
+        </div>
+        <div class="calendar-dates">
+          <p>18</p>
+          <div class="duelong">
+            <h5>56</h5>
+
+          </div>
+          <div class="duelong">
+            <h5>01</h5>
+
+          </div>
+        </div>
+        <div class="calendar-dates">
+          <p>19</p>
+          <div class="duelong">
+            <h5>14</h5>
+
+          </div>
+          <div class="duelong">
+            <h5>47</h5>
+
+          </div>
+        </div>
+        <div class="calendar-dates">20</div>
+        <div class="calendar-dates">21</div>
+        <div class="calendar-dates">22</div>
+        <div class="calendar-dates">23</div>
+        <div class="calendar-dates">24</div>
+        <div class="calendar-dates">25</div>
+        <div class="calendar-dates">26</div>
+        <div class="calendar-dates">27</div>
+        <div class="calendar-dates">28</div>
+        <div class="calendar-dates">29</div>
+        <div class="calendar-dates">30</div>
+        <div class="calendar-dates">31</div>
+      </div>
+      <div id="closeCalDiv">
+        X
+      </div>
+    </div>
+
+
+
+
+    <div id="datebox" class="mydatebox">
+      <div class="datecontent">
+        <span class="closedate" onclick="closedata()">&times;</span>
+        <div class="machines">
+          <h4>Machine 21</h4>
+          <p>Machine 21 is scheduled for maintance at 14:00 today.</p>
+        </div>
+
+        <div class="machines">
+          <h4>Machine 18</h4>
+          <p>Machine 18 is scheduled for maintenance at 16:00 today.</p>
+
+        </div>
+
+      </div>
+
     </div>
 
   </div>
-
-
-  <div class="calendar-container">
-    <div class="calendar-days">
-      <div class="days">Monday</div>
-      <div class="days">Tuesday</div>
-      <div class="days">Wednesday</div>
-      <div class="days">Thursday</div>
-      <div class="days">Friday</div>
-      <div class="days">Saturday</div>
-      <div class="days">Sunday</div>
-    </div>
-
-  <div class="date-container">
-    <div class="calendar-dates">01</div>
-    <div class="calendar-dates">02</div>
-    <div class="calendar-dates">03</div>
-    <div class="calendar-dates">04</div>
-    <div class="calendar-dates">05</div>
-    <div class="calendar-dates">06</div>
-    <div class="calendar-dates">07</div>
-    <div class="calendar-dates">08</div>
-    <div class="calendar-dates">
-      <p>9</p>
-      <div class="overdue">
-        <h5>46</h5>
-      </div>
-    </div>
-    <div class="calendar-dates">10</div>
-
-
-    <div class="calendar-dates" id="thisday" ondblclick="dayinfo()">
-
-      <p>11</p>
-      <div class="duenow">
-        <h5>21</h5>
-
-      </div>
-      <div class="duenow">
-        <h5>18</h5>
-
-      </div>
-    </div>
-
-    <div class="calendar-dates">
-      <p>12</p>
-        <div class="duenow">
-          <h5>10</h5>
-
-        </div>
-        <div class="duesoon">
-          <h5>10</h5>
-
-        </div>
-        <div class="duesoon">
-          <h5>10</h5>
-
-        </div>
-        <div class="duesoon">
-          <h5>10</h5>
-
-        </div>
-       </div>
-    <div class="calendar-dates">13</div>
-    <div class="calendar-dates">14</div>
-    <div class="calendar-dates">
-      <p>15</p>
-      <div class="duelong">
-        <h5>13</h5>
-
-      </div>
-
-      <div class="duelong">
-        <h5>12</h5>
-
-      </div>
-     </div>
-    <div class="calendar-dates">
-      <p>16</p>
-      <div class="duelong">
-        <h5>14</h5>
-
-      </div>
-      <div class="duelong">
-        <h5>47</h5>
-
-      </div>
-     </div>
-    <div class="calendar-dates">
-      <p>17</p>
-      <div class="duelong">
-        <h5>367</h5>
-
-      </div>
-    </div>
-    <div class="calendar-dates">
-      <p>18</p>
-      <div class="duelong">
-        <h5>56</h5>
-
-      </div>
-      <div class="duelong">
-        <h5>01</h5>
-
-      </div>
-     </div>
-    <div class="calendar-dates">
-      <p>19</p>
-      <div class="duelong">
-        <h5>14</h5>
-
-      </div>
-      <div class="duelong">
-        <h5>47</h5>
-
-      </div>
-     </div>
-    <div class="calendar-dates">20</div>
-    <div class="calendar-dates">21</div>
-    <div class="calendar-dates">22</div>
-    <div class="calendar-dates">23</div>
-    <div class="calendar-dates">24</div>
-    <div class="calendar-dates">25</div>
-    <div class="calendar-dates">26</div>
-    <div class="calendar-dates">27</div>
-    <div class="calendar-dates">28</div>
-    <div class="calendar-dates">29</div>
-    <div class="calendar-dates">30</div>
-    <div class="calendar-dates">31</div>
-  </div>
-  </div>
-
-
-
-
-<div id="datebox" class="mydatebox">
-  <div class="datecontent">
-    <span class="closedate" onclick="closedata()">&times;</span>
-      <div class="machines">
-        <h4>Machine 21</h4>
-        <p>Machine 21 is scheduled for maintance at 14:00 today.</p>
-      </div>
-
-      <div class="machines">
-        <h4>Machine 18</h4>
-        <p>Machine 18 is scheduled for maintenance at 16:00 today.</p>
-
-      </div>
-
-  </div>
-
-</div>
-
-</div>
 
   <!-- NOTE: maintenance report starter her -->
   <div id="template">
@@ -441,7 +445,7 @@
       <div class="comm-add">
         <div class="comment">
           <h3>Comment</h3>
-          <textarea name="comment" rows="8" cols="80"></textarea>
+          <textarea name="comment" rows="8" cols="80" id="comment-ta"></textarea>
         </div>
         <div class="files">
           <h3>Add Files/Photos</h3>
