--- a/styleguide/icons.html
+++ b/styleguide/icons.html
@@ -69,7 +69,34 @@
                       <td class="t-a-center">
                         <p> &lt;i class=&quot;fas fa-toggle-off&quot;&gt;&lt;/i&gt;</p>
                       </td>
-                  </tr
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Your resource</p>
+
+                      </td>
+                      <td class="t-a-center">
+                       <img src="../media/yours.png" alt="">
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;img class=&quot;blue-block&quot; src=&quot;media/yours.png&quot; alt=&quot;your machine&quot;&gt;</p>
+                      </td>
+                  </tr>
+
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>In service</p>
+
+                      </td>
+                      <td class="t-a-center">
+                    <i class="fas fa-wrench"></i>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;img class=&quot;blue-block&quot; src=&quot;media/yours.png&quot; alt=&quot;your machine&quot;&gt;</p>
+                      </td>
+                  </tr>
 
 
               </tbody>
