dobbeltklik og knap style
skiftet fra double click til singel click (virker ikke i html????)

givet buttons classes så de kan styles.

--- a/calendar.html
+++ b/calendar.html
@@ -16,7 +16,7 @@
   <div class="date-selectors">
 
     <div class="current-year">
-      <button name="previousyear" onclick="previousyear()"></button>
+      <button name="previousyear" class="prevyear" onclick="previousyear()"></button>
       <p id="year"></p>
       <button name="nextyear" onclick="nextyear()"></button>
     </div>
@@ -59,7 +59,7 @@
     <div class="calendar-dates">10</div>
 
 
-    <div class="calendar-dates" id="thisday" ondblclick="dayinfo()">
+    <div class="calendar-dates" id="thisday" onclick="dayinfo()">
 
       <p>11</p>
       <div class="duenow">
